css/dataCalculator.css
/* ... */
@media (min-width: 900px) {
  .page {
    display: grid;
    grid-template-areas:
      "main head"
      "main foot";
    grid-template-rows: 380px 1fr;
    grid-template-columns: 50%;
  }

  .nav {
    grid-area: main;
  }

  .foot {
    grid-area: foot;
    padding: 4em;
  }

  .phone {
    display: block;
    position: absolute;
    top: 0;
    right: 0;
    width: calc(50% - 2em);
    height: 100%;
    background: transparent;
    z-index: 4;
    background-image: url(../images/device.png);
    background-size: contain;
    background-repeat: no-repeat;
    pointer-events: none;
    background-position: center;
  }

  form {
    width: 100%;
  }
}

.calculator {
  --primary: #50f40c;
  --secondary: #0f261f;
  --tertiary: #789194;
  --tertiary-light: #f1f6f4;
  --grey: #e9edea;
  --track: var(--grey);
}

/* @media (prefers-color-scheme: dark) {
	html,
	body {
		--background: var(--darkbg);
		--track-color: var(--secondary);
	}

	.calculator {
		--grey: var(--secondary);
		--secondary: var(--tertiary);
		--track: var(--track-color);
	}
} */

.calculator .calculator__graph {
  --amount: 100deg;
  position: relative;
  display: flex;
  width: 20em;
  height: 20em;
  margin: 2em 0;
  border-radius: 50%;
  transform: rotate(180deg);
  transition: background 1s ease;
  background-color: white;
  background: conic-gradient(
    var(--background) 0deg 2deg,
    var(--primary) 2deg var(--amount),
    var(--track) var(--amount) 358deg,
    var(--background) 358deg 360deg
  );
}

.calculator .calculator__graph::after {
  content: "";
  display: block;
  width: 17em;
  height: 17em;
  background: var(--background);
  border-radius: 50%;
  margin: auto;
}

.calculator .calculator__graph::before {
  content: "";
  display: block;
  width: 14.75em;
  height: 14.75em;
  background: var(--background);
  border-radius: 50%;
  margin: auto;
  position: absolute;
  bottom: 2.25em;
  right: 2.25em;
  border: 0.375em solid var(--tertiary);
}

.calculator .calculator__graph .hero::after {
  content: "";
  display: block;
  border-left: 0.125em solid var(--tertiary);
  background-color: var(--background);
  width: 0.5em;
  height: 1.75em;
  position: absolute;
  bottom: 2.25em;
  z-index: 2;
}

.calculator .calculator__graph .hero::before {
  content: "";
  display: block;
  background-color: var(--tertiary);
  width: 0.375em;
  height: 0.375em;
  position: absolute;
  bottom: 4em;
  transform: translate(-0.25em, 0);
  border-radius: 50%;
  z-index: 3;
}

.calculator .calculator__graph .hero {
  position: absolute;
  display: block;
  transform: rotate(-180deg);
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.calculator .calculator__graph .hero__number {
  font-size: 4em;
  font-weight: 900;
  color: var(--primary);
  margin-top: 0.5em;
}

.calculator .calculator__graph .hero__units {
  color: var(--primary);
  font-size: 1em;
  font-weight: normal;
  font-family: gilroyextrabold;
  padding: 0.25em 0 0.5em;
}

.calculator .calculator__graph .hero__period {
  color: var(--secondary);
  font-size: 0.8125em;
  font-weight: 500;
  border-top: 1px solid currentcolor;
  padding: 0.375em 0;
}

.calculator .calculator__sliders {
  display: flex;
  justify-content: center;
  flex-direction: column;
  gap: 1em;
  padding: 1em 0;
}

.calculator .calculator__sliders .calculator__slider-label {
  display: flex;
  justify-content: space-between;
  padding-bottom: 0.25em;
  font-size: 1.25em;
  line-height: 1.5;
  font-weight: 500;
  color: var(--tertiary);
  z-index: 1;
}

.calculator .calculator__sliders .calculator__slider-period {
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
  font-size: 0.5em;
  font-weight: 100;
  color: var(--tertiary);
}

.calculator .calculator__sliders .calculator__radio-label {
  text-transform: uppercase;
}

.calculator .calculator__sliders .calculator__radio {
  -webkit-appearance: none;
  appearance: none;
  font-size: 1em;
  margin: 0 0.25em 0 0.5em;
}

.calculator .calculator__sliders .calculator__radio::after {
  content: "";
  display: block;
  width: 1em;
  height: 1em;
  border-radius: 50%;
  background-color: var(--grey);
  transition: 0.25s background-color ease;
}

.calculator .calculator__sliders .calculator__radio:checked::after {
  background-color: var(--primary);
}

.calculator .calculator__sliders .calculator__slider-label-help {
  color: var(--tertiary);
}

.calculator .calculator__datalist {
  position: relative;
  display: flex;
  justify-content: space-between;
  width: 100%;
  z-index: 1;
  color: var(--tertiary);
  line-height: 2;
  display: none;
}

.calculator .calculator__datalist option {
  font-weight: 100;
  font-size: 0.75em;
}

.calculator .calculator__datalist-mock {
  position: relative;
  display: flex;
  justify-content: space-between;
  width: 100%;
  z-index: 1;
  color: var(--tertiary);
  line-height: 2;
  font-weight: 100;
  font-size: 0.75em;
}

.calculator .calculator__total-cards {
  display: flex;
  flex-direction: row;
  gap: 1em;
  margin-top: 2em;
}

.calculator .calculator__total-card {
  width: 100%;
  background-color: var(--secondary);
  padding: 1em;
  border-radius: 0.5em;
  z-index: 1;
  font-size: 0.75em;
  color: var(--grey);
}

.calculator .calculator__total-card--primary {
  background-color: var(--primary);
  color: var(--secondary);
}

.calculator .calculator__total-card__value {
  font-size: 2.5em;
  font-weight: 800;
}

.calculator .calculator__data-text-option {
  -webkit-appearance: none;
  appearance: none;
  font-size: 1em;
}

.calculator .calculator__data-text-option::after {
  content: "";
  display: block;
  width: 1.5em;
  height: 1.5em;
  border: 0.25em solid var(--grey);
  border-radius: 50%;
  background-color: transparent;
  transition: 0.25s background-color ease;
}

.calculator .calculator__data-text-option:checked::after {
  background-color: var(--primary);
}
/* ... */

